--- a/styles.css
+++ b/styles.css
@@ -12,41 +12,4 @@ body {
     margin: 0;
 }
 
-/* Navigation Bar */
-.nav-list {
-    background-color: var(--clr-primary);
-    margin: 0;
-    padding: 1rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 2rem;
-    font-size: 30px;
-}
-
-.nav-item {
-    list-style: none;
-}
-
-.nav-item a {
-    text-decoration: none;
-    color: black;
-}
-
-.nav-item a:hover {
-    color: var(--clr-primary-hover);
-}
-
-.nav-item:first-child {
-    margin-right: auto;
-    margin-left: 2em;
-}
-
-/* About Section Styling */
-.about {
-    background-color: var(--clr-lightPink);
-    max-width: 30em;
-    border-radius: 10px;
-    padding: 10px;
-    margin: auto auto;
-}
+/* Navbar */
