--- a/styles.css
+++ b/styles.css
@@ -116,5 +116,18 @@ body {
         display: block;
         cursor: pointer;
     }
+
+    /* toggle active menu */
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
 }
 /* Hamburger menu end */
