--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 :root {
     /* Color Variables */
-    --clr-primary: #F47C7C;
-    --clr-primary-hover: #EF9F9F;
-    --clr-lightPink: #FAD4D4;
-    --clr-skintone: #FFF2F2;
+    --clr-primary: #27374D;
+    --clr-middle: #526D82;
+    --clr-light: #DDE6ED;
+    --clr-lightest: #DDE6ED;
 }
 
 /* CSS Reset Default Styles */
@@ -15,8 +15,8 @@
 }
 
 html {
-    font-size: 62.5%;
     font-family: 'Roboto Slab', serif;
+    font-size: 63.5%
 }
 
 li {
@@ -30,15 +30,15 @@ a {
 /* CSS Reset Default Styles */
 
 body {
-    background-color: #FFF2F2;
+    background-color: var(--clr-light);
     margin: 0;
 }
 
 /* Navbar Start */
 
 .header {
-    border-bottom: 1px solid #E2E8F0;
-    background-color: #F47C7C;
+    border-bottom: 1px solid var(--clr-middle);
+    background-color: var(--clr-primary);
 }
 
 .navbar {
@@ -63,11 +63,11 @@ body {
 .nav-link {
     font-size: 2rem;
     font-weight: 600;
-    color: #475569;
+    color: var(--clr-lightest);
 }
 
 .nav-link:hover {
-    color: #482ff7;
+    color: var(--clr-middle);
 }
 
 .nav-logo {
@@ -78,7 +78,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-left: 4rem;
-    color: #475569
+    color: var(--clr-lightest);
 }
 
 .nav-logo img {
@@ -101,7 +101,7 @@ body {
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: #101010;
+    background-color: var(--clr-lightest);
 }
 
 @media only screen and (max-width: 768px) {
@@ -110,7 +110,7 @@ body {
         left: -100%;
         top: 9rem;
         flex-direction: column;
-        background-color: #fff;
+        background-color: var(--clr-primary);
         width: 100%;
         border-radius: 10px;
         text-align: center;
@@ -145,3 +145,37 @@ body {
     }
 }
 /* Hamburger menu end */
+
+/* Welcome Section */
+
+.welcome-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    background-color: var(--clr-lightest);
+    font-size: 3rem;
+    text-align: center;
+}
+
+.welcome-heading,
+.welcome-line,
+.welcome-btn {
+    margin: 40px;
+}
+
+.welcome-btn {
+    padding: 1.5rem 8rem;
+    font-size: 2rem;
+    background-color: var(--clr-primary);
+    color: var(--clr-lightest);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
+    font-weight: 700;
+    border-radius: 5px;
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .15);
+    transition: transform .3s;
+}
